# channels-demo

./: README.rst  pyproject.toml
channels_demo/: manage.py
channels_demo/channels_demo/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
channels_demo/chat/: consumers.py  routing.py  tests.py  urls.py
channels_demo/chat/templates/chat/: index.html  room.html
