[tool.poetry]
name = "channels-demo"
version = "0.1.0"
description = ""
authors = ["Martha Rotter <martharotter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"
channels = "^2.4.0"
pypiwin32 = "^223"
channels_redis = "^2.4.1"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
